--- a/01_document/02_modelo/cap-modelo.tex
+++ b/01_document/02_modelo/cap-modelo.tex
@@ -1,10 +1,10 @@
-\chapter{Distribución Weibull}
+\chapter{Distribución de Weibull}
 
-El presente capítulo tiene como objetivo principal proponer una reparametrización de la distribución Weibull para adaptarla al modelo de regresión cuantílica. Para dicha reparametrización, se definirá su función de densidad y función acumulada, y asimismo se examinará sus propiedades.
+El presente capítulo tiene como objetivo principal proponer una reparametrización de la distribución de Weibull para adaptarla al modelo de regresión cuantílica. Para dicha reparametrización, se definirá su función de densidad y función de distribución acumulada, y asimismo se examinará sus propiedades.
 
-\section{Distribución Weibull}
+\section{Distribución de Weibull}
 
-La distribución Weibull fue presentada por \cite{weib:weib}. En dicho artículo de investigación, Weibull menciona las características de una función de densidad suficientemente flexible para ser adaptada a diversas investigaciones, desde la rama de resistencia de materiales hasta el análisis de altura de hombres adultos radicados en las Islas Británicas. Una variable aleatoria continua $Y$, con soporte $Y \in (0,\infty)$, sigue una distribución Weibull si su función de densidad es dada por la siguiente expresión:
+La distribución de Weibull fue introducida por \cite{weib:weib}. En dicho artículo de investigación, Weibull menciona las características de una función de densidad suficientemente flexible para ser adaptada a diversas investigaciones, desde la rama de resistencia de materiales hasta el análisis de altura de hombres adultos radicados en las Islas Británicas. Una variable aleatoria continua $Y$, con soporte $Y \in (0,\infty)$, sigue una distribución de Weibull si su función de densidad es dada por la siguiente expresión:
 
 \begin{equation}
 f{(y)}= \frac{\alpha}{\sigma}\left(\frac{y}{\sigma}\right)^{\alpha-1} \exp{\left(-\frac{y}{\sigma}\right)^{\alpha}}
@@ -20,7 +20,7 @@ f{(y)}= \frac{\alpha}{\sigma}\left(\frac{y}{\sigma}\right)^{\alpha-1} \exp{\left
 
 \noindent para $0 < t < 1$.
 
-La flexibilidad denotada por Weibull puede observarse a través de la Figura \ref{weib:original}. En dicha figura, observamos que una modificación del parámetro de escala $\sigma$ modifica la tendencia central de la distribución; es decir, se observa que la distribución se mueve en la dirección que el parámetro $\sigma$ se mueve. Cabe resaltar que, con un $\alpha$ fijo, la distribución tiende a ser más dispersa. Por otro lado, se observa que el aumento del parámetro de forma $\alpha$ contrae la distribución hacia el valor central de la misma. Esto es más pronunciado en la medida que dicho parámetro aumenta, manteniendo el parámetro $\sigma$ constante. No obstante, cabe resaltar que la distribución se torna asimétrica en tanto los valores de $\alpha$ son pequeños.
+La flexibilidad referida por Weibull puede observarse a través de la figura \ref{weib:original}. En dicha figura, observamos que una modificación del parámetro de escala $\sigma$ modifica la tendencia central de la distribución; es decir, se observa que la distribución se mueve en la dirección que el parámetro $\sigma$ se mueve. Cabe resaltar que, con un $\alpha$ fijo, la distribución tiende a ser más dispersa. Por otro lado, se observa que el aumento del parámetro de forma $\alpha$ contrae la distribución hacia el valor central de la misma. Esto es más pronunciado en la medida que dicho parámetro aumenta, manteniendo el parámetro $\sigma$ constante. No obstante, cabe resaltar que la distribución se torna asimétrica en tanto los valores de $\alpha$ son pequeños.
 
 \begin{figure}
 	\includegraphics[width=\textwidth]{weib_distrib}
@@ -33,25 +33,25 @@ Para una variable $Y \sim W(\alpha, \sigma)$, la media y varianza se definen de 
 \[E(Y)=\sigma \Gamma\left( 1+\frac{1}{\alpha} \right).\]
 \[V(Y)=\sigma^{2}\left[ \Gamma\left( 1+\frac{2}{\alpha} \right)-\left( \Gamma\left( 1+\frac{1}{\alpha} \right) \right)^{2} \right].\]
 
-\section{Proposición y estudio de una nueva estructura de la distribución}
+\section{Hacia una nueva estructura de la distribución de Weibull}
+\label{sec2.2}
 
-Consideramos una reparametrización del parámetro de forma $\sigma$ en términos del cuantil $t, q_{t}$ en los siguientes términos:
+En esta sección consideramos una reparametrización del parámetro de forma $\sigma$ en términos del cuantil $t, q_{t}$ en los siguientes términos:
 
 \[\sigma = \frac{q_t}{(-\log(1-t))^{\frac{1}{\alpha}}} \]
 
-\noindent en dónde $t$ será un valor conocido y se encuentra en el intervalo $[0,1]$. En esta nueva estructura, $q_{t}$ y $\alpha$ tienen espacios paramétricos independientes tal que $(q_{t},\alpha) \in (0,\infty) \times (0,\infty)$. Una variable aleatoria que sigue esta parametrización se denota como $Y \sim W_{r}(q_{t},\alpha)$.
+\noindent en dónde $t$ será un valor conocido que se encuentra en el intervalo $[0,1]$. En esta nueva estructura, $q_{t}$ y $\alpha$ tienen espacios paramétricos independientes tal que $(q_{t},\alpha) \in (0,\infty) \times (0,\infty)$. Una variable aleatoria $Y$ que sigue una distribución Weibull bajo esta parametrización se denota como $Y \sim W_{r}(q_{t},\alpha,t)$ y posee la siguiente función de densidad:
 
-La función de densidad de dicha variable $Y$ tiene la siguiente expresión:
 \begin{equation}
 f_{Y}(y| q_{t},\alpha)=\frac{\alpha c(t)}{q_{t}}\left( \frac{y}{q_{t}} \right)^{\alpha-1}\exp\left( -c(t)\left( \frac{y}{q_{t}} \right)^{\alpha} \right)
 \end{equation}
 \\
-\noindent en dónde $c(t)= \left( -\log(1-t) \right)$. 
+\noindent dónde $c(t)= \left( -\log(1-t) \right)$. 
 
-Los parámetros $q_{t}$ y $\alpha$, así como el nivel del cuantil $t$ (el cual es conocido), caracterizan la función de densidad conforme se observa en la Figura \ref{fig:newdens}. En dicha figura, se observa el efecto del nuevo parámetro $q_t$ y el cuantil $t$. Podemos observar lo siguiente: 
+Los parámetros $q_{t}$ y $\alpha$, así como el nivel del cuantil $t$ (el cual es conocido), caracterizan la función de densidad conforme se observa en la Figura \ref{fig:newdens}. En dicha figura, se observa el efecto del nuevo parámetro $q_t$ y el nivel $t$. Podemos observar lo siguiente: 
 
 \begin{itemize}
-	\item Se observa que, para un mismo cuantil $t$, el nuevo parámetro $q_t$ tiende a mover la tendencia central de la distribución en la misma dirección, manteniendo el parámetro de escala $\alpha$ constante. Asimismo, dicho aumento del parámetro genera valores extremos: la distribución se torna asimétrica, con valores extremos generados cada vez con mayor frecuencia.
+	\item Se observa que, para un mismo cuantil $q_t$, el nuevo parámetro $q_t$ tiende a mover la tendencia central de la distribución en la misma dirección, manteniendo el parámetro de escala $\alpha$ constante. Asimismo, dicho aumento del parámetro genera valores extremos: la distribución se torna asimétrica, con valores extremos generados cada vez con mayor frecuencia.
 	\item Se observa que, para un mismo parámetro $q_t$, la distribución se expande en la medida que se observe los cuantiles inferiores. Asimismo, en determinados casos pronuncia la asimetría identificada anteriormente.
 \end{itemize}
 
@@ -59,16 +59,23 @@ Los parámetros $q_{t}$ y $\alpha$, así como el nivel del cuantil $t$ (el cual es
 \begin{figure}
 \centering
 	\includegraphics[width=1.5\textheight]{rep_weibull_qt}
-	\caption{Estudio de la nueva parametrización}
+	\caption{Densidades de la distribución de Weibull bajo la nueva parametrización}
 	\label{fig:newdens}
 \end{figure}
 \end{landscape}
 
-En base a la reparametrización propuesta, la función acumulada de $Y \sim W_r(q_t,\alpha)$ es de la forma:
+En base a la reparametrización propuesta, la función de distribución acumulada de $Y \sim W_r(q_t,\alpha,t)$ es de la forma:
 
 \begin{equation} \label{eq:1}
-F_{Y}\left(y| q_{t},\alpha,t \right)=1-\exp\left( c(t)\left( \frac{y}{q_{t}} \right)^{\alpha} \right).
+	F_{Y}\left(y| q_{t},\alpha,t \right)=1-\exp\left( -log(1-t)\left( \frac{y}{q_{t}} \right)^{\alpha} \right).
 \end{equation}
+
+\noindent Recordemos que $e^{a*log(z)} = z^a$, en dónde $a = -\left(\frac{y}{q_{t}} \right)^{\alpha}$ y $z = (1-t)$. Por lo tanto tenemos:
+
+\begin{equation} \label{eq:2}
+F_{Y}\left(y| q_{t},\alpha,t \right)=1-(1-t)^{-\left(\frac{y}{q_{t}} \right)^{\alpha}}.
+\end{equation}
+
 
 Asimismo, el valor esperado y varianza de dicha variable aleatoria está dada por:
 
