--- a/01_document/03_regresion/03_regresion.tex
+++ b/01_document/03_regresion/03_regresion.tex
@@ -1,10 +1,10 @@
 	\chapter{Modelo de regresión cuantílica para datos positivos}
-	El presente capítulo tiene como objetivo especificar el modelo de regresión cuantílica para datos positivos con censura intervalar. Asimismo, detallamos la estimación de los parámetros desde la perspectiva de la inferencia clásica.
+	El presente capítulo tiene como objetivo especificar el modelo de regresión cuantílica para datos positivos con censura intervalar. Asimismo, detallamos la estimación de sus parámetros desde la perspectiva de la inferencia clásica.
 
 	\section{Datos positivos con censura intervalar}
 	\label{metodo:reg}
 
-	Siguiendo la definición expuesta en \cite{peto:p}, definimos a $Y$ como una variable aleatoria con una \textbf{f.d.a.} $F_{y}(Y)$. Dicha variable se entiende como \textit{censurada} si la única información que tenemos sobre $Y$ es que $Y$ yace en un intervalo $I$. Bajo este contexto, podemos definir una variable aleatoria $Z$ como una variable indicadora que precisa el $j$-ésimo intervalo $[a_j,a_{j+1}], \text{con } j = 1, \dots, k$  en el que se encuentra la variable $Y$. Por lo tanto, durante el proceso de recolección de datos, observamos directamente la variable $Z$, mientras que la variable $Y$ es una variable latente. Para ilustrar este proceso, imaginemos un proceso de administración de encuestas, en dónde el encuestador consulta a la persona en qué intervalo se encuentra su sueldo mensual. Esto requiere que la variable $Z$ sea una variable categórica, pues la persona solo indica una opción. Entonces, podemos definir dicha variable mediante la siguiente expresión:
+	Siguiendo la definición expuesta en \cite{peto:p}, definimos a $Y$ como una variable aleatoria con una función de distribución acumulada $F_{Y}(y)$. Dicha variable se entiende como \textit{censurada intervalarmente} si la única información que tenemos sobre ella es que $Y$ yace en un intervalo $I$. Bajo este contexto, podemos definir una variable aleatoria $Z$ como una variable indicadora que precisa el $j$-ésimo intervalo $[a_j,a_{j+1}[, \text{con } j = 1, \dots, k$  en el que se encuentra la variable $Y$. Por lo tanto, durante el proceso de recolección de datos, observamos directamente la variable $Z$, mientras que la variable $Y$ es una variable latente. Para ilustrar este proceso, imaginemos un proceso de administración de encuestas, en dónde el encuestador consulta a la persona en qué intervalo se encuentra su sueldo mensual. Esto requiere que la variable $Z$ sea una variable categórica, pues la persona solo indica una opción. Entonces, podemos definir dicha variable mediante la siguiente expresión:
 
 	\begin{equation}
 	Z = 
@@ -17,9 +17,9 @@
 		\end{cases}
 	\end{equation}
 
-	\noindent en dónde $a_1 < a_2 < \cdots <a_{k+1}$. Esto corresponde a los límites del intervalo $I$, con $a_{1}=0$ y $a_{K+1}=\infty$. La \textbf{f.d.p} de la variable observable $Z$ está definida de la siguiente forma:
+	\noindent en dónde $a_1 < a_2 < \cdots <a_{k+1}$. Estos corresponden a los límites del intervalo $I$, con $a_{1}=0$ y $a_{K+1}=\infty$. La función de probabilidad de la variable observable $Z$ está definida de la siguiente forma:
 	\begin{equation} \label{eq:2}
-		P\left( Z=j \right)=P\left(a_{j} \leq Y < a_{j+1} \right) = F_Y(a_{j+1}) - F_Y(a_{j}), j=1,\dotsc,k
+		P\left( Z=j \right)=P\left(a_{j} \leq Y < a_{j+1} \right) = F_Y(a_{j+1}) - F_Y(a_{j})| j=1,\dotsc,k
 	\end{equation}
 
 	\noindent en dónde $F_Y(\cdot)$ es la función de distribución acumulada de Y. La variable $Z$ que sigue la distribución anteriormente mencionada está denotada por 
@@ -28,11 +28,11 @@
 \noindent donde $\boldsymbol{\pi}=\left( \pi_{1},\dots,\pi_{k}\right)^{T}$y $\pi_{j}=P(Z=j)$.
 
 
-Para efectos de la presente tesis, asumiremos que el proceso de censura de datos es independiente a la variable $Y$. \cite{calle:oller} denomina esto como un proceso no informativo, pues ello indica que el conocimiento de que una observación se encuentra en el intervalo $[a_j,a_{j+1}]$ no precisa información adicional sobre la variable $Y$: solo indica que dicha variable está contenida entre esos límites. Conforme \cite{self:grossman}, esta suposición indica que dos valores específicos de $Y$, $y_w$ y $y_k$, que se encuentren dentro del intervalo $[a_j,a_{j+1}]$, tienen la certeza de encontrarse en dicho intervalo.
+Para efectos de la presente tesis, asumiremos que el proceso de censura de datos es independiente a la variable $Y$. \cite{calle:oller} denomina esto como un proceso no informativo, pues ello indica que el conocimiento de que una observación se encuentra en el intervalo $[a_j,a_{j+1}[$ no precisa información adicional sobre la variable $Y$: solo indica que dicha variable está contenida entre esos límites. Conforme a \cite{self:grossman}, esta suposición indica que dos valores específicos de $Y$, $y_w$ y $y_k$, que se encuentren dentro del intervalo $[a_j,a_{j+1}]$, tienen la certeza de encontrarse en dicho intervalo.
 
 \section{Función de verosimilitud para datos positivos con censura intervalar}
 
-Bajo el contexto presentado anteriormente, y considerando las ideas plasmadas por \cite{gentleman:lmk}, el proceso de censura que deviene en la generación de la variable $Z$ es independiente del proceso generador de datos de $Y$. Por lo tanto, la estimación de los parámetros que definen la distribución de $Y$, denotados por $\boldsymbol{\theta} = [q_t, \alpha]^{t}$ , no es afectado por el proceso de censura. Bajo esta suposición, consideramos la verosímilitud de los datos con censura intervalar (es decir, los datos directamente observables) de la forma:
+Bajo el contexto presentado anteriormente, y considerando las ideas plasmadas por \cite{gentleman:lmk}, el proceso de censura que deviene en la generación de la variable $Z$ es independiente del proceso generador de datos de $Y$. Por lo tanto, la estimación de los parámetros que definen la distribución de $Y$, denotados por $\boldsymbol{\theta} = [q_t, \alpha]^{t}$ , no es afectado por el proceso de censura. Bajo esta suposición, la verosímilitud de datos censurados intervalarmente (es decir, con  los datos directamente observables) es de la forma:
 
 \begin{equation}
 	L(\boldsymbol{\theta}) = \prod_{i=1}^{n} \prod_{j=1}^{k} \pi_{j}^{\mathbb{I}(Z_{i}=j)}
@@ -44,23 +44,24 @@ Bajo el contexto presentado anteriormente, y considerando las ideas plasmadas po
 	L(\boldsymbol{\theta}) = \prod_{i=1}^{n}(F_Y(l_{i}) - F_Y(u_{i})) 
 \end{equation}
 
-\noindent en dónde $l_i$ y $u_i$ corresponden a los límites inferiores y superiores del intervalo en dónde se encuentra la i-ésima observación.
+\noindent en dónde $l_i$ y $u_i$ corresponden a los límites inferiores y superiores del intervalo en dónde se encuentra la $i$-ésima observación.
 
-Bajo este criterio, la verosímilitud solo depende de los valores extremos del intervalo y de la \textbf{f.d.a.} de la variable latente $Y$. 
+Bajo este criterio, la verosímilitud solo depende de los valores extremos del intervalo y de la función de distribución acumulada de la variable latente $Y$. 
 
-\section{Modelo de regresión para datos positivos con censura intervalar}
-
-Considerando la reparametrización expuesta en la sección 2, el modelo de regresión cuantílica, basado en la distribución Weibull, está dado por la siguiente expresión:
+\section{Modelo de regresión para respuestas positivas con censura intervalar}
+\label{sec3.3}
+Considerando la reparametrización expuesta en la sección 2, el modelo de regresión cuantílica, basado en la distribución de Weibull, está dado por la siguiente expresión:
 
 \[Y_{i} \sim W_{r}\left( q_{t_{i}},\alpha,t \right).\]
 \[g\left( q_{t_{i}} \right) = x_{i}^{T}\boldsymbol{\beta}.\]
 
-\noindent en dónde $\boldsymbol{\beta}=\left[ \beta_0,\beta_{1},\dots,\beta_{p} \right]^{T}$ y $x_{i}^{T} =\left[ 1,x_{i1},x_{i2},\dots,x_{ip}, \right]^{T}$. La función $g(\cdot)$ es una función de enlace estrictamente monótona y doblemente diferenciable. En el presente modelo, se utilizará la función de enlace logarítmica. El parámetro $\alpha$, el parámetro $q_{t_{i}}$ y $t$ está definido conforme la sección 2.2. La estimación de los parámetros $\boldsymbol{\beta}$ y $\alpha$ se realizará mediante el método de máxima verosimilitud.
+\noindent en dónde $\boldsymbol{\beta}=\left[ \beta_0,\beta_{1},\dots,\beta_{p} \right]^{T}$ y $x_{i}^{T} =\left[ 1,x_{i1},x_{i2},\dots,x_{ip} \right]^{T}$, lo cual corresponde a los coeficientes y covariables respectivamente. La función $g(\cdot)$ es una función de enlace estrictamente monótona y doblemente diferenciable. En el presente modelo, se utilizará la función de enlace logarítmica. El parámetro $\alpha$, el parámetro $q_{t_{i}}$ y $t$ están definidos conforme a lo visto en la sección \ref{sec2.2}. La estimación de los parámetros $\boldsymbol{\beta}$ y $\alpha$ se realizará mediante el método de máxima verosimilitud.
 
 \subsection{Función de verosimilitud}
-\ref{verofunc}
+\label{verofunc}
 
-Consideramos que solo conocemos que $Y_{i}$ se encuentra en un intervalo de $K$ posibles intervalos de la forma $[a_{j},a_{j+1}]$ con $a_1 < a_2 < \dots < a_{k+1}$ y que $Z_{i}=j$ denota que $Y_{i} \in [a_{j},a_{j+1}]$. Por lo tanto, considerando los resultados de la sección 3.1, tenemos que
+Consideramos que solo conocemos que $Y_{i}$ se encuentra en un intervalo de $K$ posibles intervalos de la forma $[a_{j},a_{j+1}]$ con $a_1 < a_2 < \dots < a_{k+1}$ y que $Z_{i}=j$ denota que $Y_{i} \in [a_{j},a_{j+1}]$. Por lo tanto, considerando los resultados de la sección \ref{metodo:reg}, tenemos que
+
 
 \[Z_{i} \sim \text{Categórica}(\boldsymbol{\pi}_{i}).\]
 
@@ -70,7 +71,7 @@ Consideramos que solo conocemos que $Y_{i}$ se encuentra en un intervalo de $K$ 
 \pi_{ij} = F_{Y}(a_{j+1}|q_{t_{i}},\alpha,x) - F_{Y}\left(a_{j}|q_{t_{i}},\alpha,x \right)
 \end{equation}
 
-\noindent dónde $F_Y(\cdot|\cdot,\cdot,\cdot)$ es la \textbf{f.d.a} de la distribución Weibull reparametrizada dada en 2.3.Entonces la función de verosimilitud de las variables observadas $Z_{1},Z_{2},\dots,Z_{n}$ es dada por lo siguiente:
+\noindent dónde $F_Y(\cdot|\cdot,\cdot,\cdot)$ es la función de distribución acumulada de la distribución Weibull reparametrizada dada en \ref{sec2.2}.Entonces la función de verosimilitud de las variables observadas $Z_{1},Z_{2},\dots,Z_{n}$ es dada por lo siguiente:
 
 \[L(\boldsymbol{\theta})=\prod_{i=1}^{n}\prod_{j=1}^{k} \pi_{j}^{1\left( Z_{i}=j \right)}.\]
 
@@ -78,25 +79,28 @@ Luego, considerando  [$l_{i},u_{i}$] como el intervalo dónde $Y_{i}$ fue observa
 
 \[L\left( \boldsymbol{\theta}\right)=\prod_{i=1}^{n}\left( F(u_{i}|q_{t_{i}},\alpha,t) - F(l_{i}|q_{t_{i}},\alpha,t) \right) \]
 
-\[L(\boldsymbol{\theta})=\sum_{i=1}^{n} \log \left( F(u_{i}|q_{t_{i}},\alpha,t) - F\left( l_{i}|q_{t_{i}},\alpha,t \right) \right)\]
+Luego, la función de log-verosímilitud es dada por:
 
-\[L(\boldsymbol{\theta})=\sum_{i}^{n} \log \left( \exp\left( -c(t)\left( \frac{u_{i}}{e^{x_{i}^{T}\boldsymbol{\beta}}} \right)^{\alpha} - \exp\left( -c(t)\left( \frac{l_{i}}{e^{x_{i}^{T}\boldsymbol{\beta}}} \right)^{\alpha} \right) \right) \right)\]
-\noindent en donde $c(t)=(-log(1-t))^{\frac{1}{\alpha}}$.
+\[l(\boldsymbol{\theta})=\sum_{i=1}^{n} \log \left( F(u_{i}|q_{t_{i}},\alpha,t) - F\left( l_{i}|q_{t_{i}},\alpha,t \right) \right)\]
+
+\[ l(\boldsymbol{\theta})= \sum_{i=1}^{n} log\left( \left( 1-t \right)^{(\frac{u_i}{\exp(x_{i}^{T}\beta)})^{\alpha}}} - \left( 1-t \right)^{(\frac{l_{i}}{\exp(x_{i}^{T}\beta)})^{\alpha}} \right) \]
+
 
 Los estimadores de máxima verosimilitud para los parámetros $\alpha$ y $\boldsymbol{\beta}$ se encuentran maximizando la función anteriormente expuesta. Para ello, obtenemos las gradientes de $\alpha$ y $\boldsymbol{\beta}$, que se presentan a continuación (asumiendo que $g(\cdot)$ es la función logaritmo):
 
-\[\frac{\partial L}{\partial \alpha}=\sum_{i=1}^{n} \frac{c(t)}{(\gamma_{i})^{\alpha}(\lambda_{i_{2}}-\lambda_{i_{1}})}\left( (u_{i})^{\alpha} \log\left( \frac{u_{i}}{\gamma_{i}} \right) \lambda_{i_{2}} - (l_{i})^{\alpha} \log\left( \frac{l_{i}}{\gamma_{i}} \right) \lambda_{i_{1}}\right)\]
+\[ \frac{\partial l}{\partial \alpha}= \sum_{i=1}^{n} \frac{1}{(1-t)^{\phi_{u}}-(1-t)^{\phi_{l}}} log(1-t)(\phi_u \log(u_i*\gamma_i)(1-t)^{\phi_u} - \phi_l \log(l_i*\gamma_i)(1-t)^{\phi_{l}})\]
 
-\[\frac{\partial L}{\partial \beta_{j}}=\sum_{i=1}^{n} \left(\frac{\alpha c(t) x_{ij}}{(\gamma_{i})^{\alpha}(\lambda_{i_{1}}-\lambda_{i_{2}})}\right) \left( (a_{i_{j}})^{\alpha}\lambda_{i_{1}} - (a_{i_{j+1}})^{\alpha} \lambda_{i_{2}} \right)\]
+\[\frac{\partial l}{\partial \beta_{j}}=\sum_{i=1}^{n} \frac{\alpha x_j \log(1-t)}{(1-t)^{\phi_u} - (1-t)^{\phi_l}} (\phi_l(1-t)^{\phi_l}-\phi_u(1-t)^{\phi_u}) \]
+
 \noindent en dónde:
-\[ \gamma_{i} = \exp(\eta_{i})\]
+\[ \gamma_{i} = \exp(-\eta_{i})\]
 \[ \eta_{i} = x_{i}^{T}\boldsymbol{\beta}\]
-\[ \lambda_{i_{1}} = \exp\left( -c(t) \left(\frac{l_{i}}{\gamma_{i}}\right)^{\alpha} \right)\]
-\[ \lambda_{i_{2}} = \exp\left( -c(t) \left(\frac{u_{i}}{\gamma_{i}}\right)^{\alpha} \right)\]
+\[ \phi_u = \left( \frac{u_i}{e^{x_i^{T}\beta}} \right)^{\alpha}\]
+\[ \phi_l = \left( \frac{l_i}{e^{x_i^{T}\beta}} \right)^{\alpha}\]
 
-Dichos estimadores de máxima verosimilitud, bajo ciertas condiciones de regularidad, son consistentes (es decir, que $\boldsymbol{\hat{\theta}} \rightarrow \boldsymbol{\theta}$ cuando $n \rightarrow \infty$) y asíntoticamente normales con distribución:
+Dichos estimadores de máxima verosimilitud son consistentes  (es decir, que $\boldsymbol{\hat{\theta}} \rightarrow \boldsymbol{\theta}$ cuando $n \rightarrow \infty$) y asíntoticamente normales\footnote{Se asume que la función de densidad cumple con las condiciones de regularidad expuestas en \cite{casella:berg}} con distribución:
 
-\[\boldsymbol{\hat{\theta}}^{\omega} \sim \mathcal{N}\left(\boldsymbol{\theta},\mathcal{I}(\boldsymbol{\hat{\theta}})^{-1}\right)\]
+\[\boldsymbol{\hat{\theta}} \sim \mathcal{N}\left(\boldsymbol{\theta},\mathcal{I}(\boldsymbol{\hat{\theta}})^{-1}\right)\]
 
 \noindent cuando $n \rightarrow \infty$. $\mathcal{I}(\boldsymbol{\hat{\theta}})$ es la matriz de información de Fisher observada, la cual en nuestro modelo tiene la estructura:
 
@@ -104,9 +108,9 @@ Dichos estimadores de máxima verosimilitud, bajo ciertas condiciones de regulari
 	I(\boldsymbol{\hat{\theta}})=
 \begin{bmatrix}
 
-	\frac{\partial L(\boldsymbol{\theta})}{\partial \alpha \partial \alpha ^{T}} & \frac{\partial L(\boldsymbol{\theta})}{\partial \boldsymbol{\beta} \partial \alpha}\\
+	\frac{\partial l(\boldsymbol{\theta})}{\partial \alpha \partial \alpha ^{T}} & \frac{\partial l(\boldsymbol{\theta})}{\partial \boldsymbol{\beta} \partial \alpha}\\
 
-\frac{\partial L(\boldsymbol{\theta})}{\partial \boldsymbol{\beta} \partial \alpha} & \frac{\partial L(\boldsymbol{\theta})}{\partial \boldsymbol{\beta} \partial \boldsymbol{\beta} ^{T}}
+\frac{\partial l(\boldsymbol{\theta})}{\partial \boldsymbol{\beta} \partial \alpha} & \frac{\partial l(\boldsymbol{\theta})}{\partial \boldsymbol{\beta} \partial \boldsymbol{\beta} ^{T}}
 
 \end{bmatrix} \rvert \boldsymbol{\theta} = \boldsymbol{\hat{\theta}}\]
 
@@ -114,35 +118,35 @@ Los errores estándares de cada coeficiente se estiman a través de dicha matriz d
 
 \[\hat{\theta_j} \pm z_{1-\frac{\alpha}{2}} C_{jj}.\]
 
-\noindent dónde $C_{jj}$ es la raíz del j-ésimo elemento diagonal de $I(\hat{\boldsymbol{\theta}})^{-1}$
+\noindent dónde $C_{jj}$ es la raíz del $j$-ésimo elemento diagonal de $I(\hat{\boldsymbol{\theta}})^{-1}$
 
 \section{Simulación de datos}
 
-En esta sección se presenta un estudio de simulación para evaluar si el método descrito en \ref{verofunc} permite recuperar los parámetros propuestos del modelo de censura intervalar para datos positivos. Para ello, se evaluará el desempeño de la simulación mediante tres criterios: el sesgo relativo, el error cuadrático medio y el ratio de cobertura.
+En esta sección se presenta un estudio de simulación para evaluar la metodología de estimación en la sección \ref{verofunc} permite recuperar los parámetros propuestos del modelo de censura intervalar para datos positivos. Para ello, se evaluará el desempeño de la simulación mediante tres criterios: el sesgo relativo, el error cuadrático medio y el ratio de cobertura.
 
 \subsection{Metodología para la simulación de datos}
 
-La presente sección tiene como objetivo realizar un estudio de simulación en el que se evalúe la adecuada estimación del modelo propuesto. Para ello, se generará un conjunto de datos dónde cada observación sigue la distribución $Y_i \sim W_r(q_t, \alpha,t)$. Luego, cada una de estas observaciones serán censuradas dando como resultado la variable $Z_i$, la cual sigue lo explicado en la sección 3.1. Asimismo, dicha base de datos contiene otras variables simuladas, las cuales actuarán como variables independientes en un contexto de regresión. El objetivo principal del estudio de simulación evaluar si el método de estimación planteado, permite recuperar adecuadamente los parámetros de regresión establecidos anteriormente. Los criterios sobre los cuales se analizará la estimación del modelo son: sesgo relativo, error cuadrático medio y cobertura.
+La presente sección tiene como objetivo realizar un estudio de simulación en el que se evalúe la adecuada estimación del modelo propuesto. Para ello, se generará un conjunto de datos, dónde cada observación $i$ sigue la distribución $Y_i \sim W_r(q_t, \alpha,t)$. Luego, cada una de estas observaciones independientes serán censuradas dando como resultado la variable $Z_i$, la cual sigue lo explicado en la sección \ref{metodo:reg}. Asimismo, dicha base de datos contiene otras variables simuladas, las cuales actuarán como variables independientes en un contexto de regresión. El objetivo principal del estudio de simulación es evaluar si el método de estimación planteado, permite recuperar adecuadamente los parámetros de regresión establecidos anteriormente. Los criterios sobre los cuales se analizará la estimación del modelo son: sesgo relativo, error cuadrático medio y cobertura.
 
-El proceso de simulación consiste en generar $5.000$ réplicas para cada tamaño de muestra de $n=\{100, 500, 1.000\}$. Simularemos la variable respuesta $Y_{i} \sim W_r(Q_{t_{i}},\alpha,t)$ considerando 3 covariables $X_{1i},X_{2i},X_{3i}$ que serán simuladas como:
+El proceso de simulación consiste en generar $5.000$ réplicas para cada uno de los tamaño de muestra $n \in \{100, 500, 1.000\}$. Simularemos la variable respuesta $Y_{i} \sim W_r(q_{ti},\alpha,t)$ considerando 3 covariables $X_{1i},X_{2i},X_{3i}$ que serán simuladas como:
 \[X_{1i} \sim N(2,0.25)\]
 \[X_{2i} \sim Beta(2,3)\]
 \[X_{3i} \sim Gamma(2,20)\]
 
 Conforme lo mencionado en la sección 3.2.1, $q_{t_{i}} =  \exp(x_i^T \boldsymbol{\beta})$, en dónde $\boldsymbol{\beta} =[7, 0.3, 0.84, 2.5]^T$ y $x_{i}=(1,X_{1i},X_{2i},X_{3i})^{T}$. Por otro lado, el parámetro de dispersión tomará el valor $\alpha = 2$. Finalmente, se realizará la evaluación por los cuantiles $t = [0.1, 0.2, \dots, 0.9]$.
 
-Se asume que $Y_i \sim W_r(q_{ti}, \alpha,t)$ se observa con censura intervalar. En este estudio asumiremos que solo observamos una variable $Z$ que particiona la variable $Y_i$ en intervalos de igual amplitud, con la excepción del último intervalo, el cual tiene la estructura $[a_{j}, \infty)$. Una vez generada dicha variable, se realiza el modelamiento de la variable con censura intervalar sobre las variables independientes creadas previamente. El objetivo final es, a través del método de máxima verosímilitud, estimar los coeficientes $\boldsymbol{\beta}$ definidos previamente.
+Se asume que $Y_i \sim W_r(q_{ti}, \alpha,t)$ se observa con censura intervalar. En este estudio asumiremos que solo observamos una variable $Z$ que particiona la variable $Y_i$ en intervalos de igual amplitud, con la excepción del último intervalo, el cual tiene la estructura $[a_{j}, \infty)$. Una vez generada dicha variable, se realiza el modelamiento de la variable con censura intervalar sobre las variables independientes creadas previamente. El objetivo final es, a través del método de máxima verosímilitud, estimar los coeficientes $\boldsymbol{\beta}$ y $\alpha$ definidos previamente.
 
 \subsection{Implementación del modelo}
 
 La implementación del modelo se realizó a través del lenguaje de programación R, tomando en consideración las definiciones presentadas en el capítulo 3 de la presente tesis. El pseudocódigo de la implementación se encuentra en el Apéndice.
 
 Una vez generadas las simulaciones, se evaluó para cada escenario (cuantil y tamaño de muestra) los siguientes indicadores:
-\[ \hat{\text{Sesgo relativo:}} \frac{1}{M}\sum_{j=1}^{M}(\hat{\theta_j} - \theta)\]
+\[ \hat{\text{Sesgo relativo:}} \frac{1}{M}\sum_{j=1}^{M}\frac{(\hat{\theta_j} - \theta)}{\theta}\]
 \[ \hat{\text{ECM:} \frac{1}{M}} \sum_{j=1}^M (\hat{\theta_j} - \theta)^2 \]
 \[ \hat{\text{Cobertura:} \frac{1}{M}} \sum_{j=1}^M \mathcal{I}(\boldsymbol{\theta} \in IC_{j})\]
 
-\noindent dónde $\theta$ es el verdadero valor del parámetro, $\hat{\theta}_{j}$ la estimación obtenida en la $j$-ésima réplica y M el número de réplicas. $IC_j$ es el intervalo de confianza al 95\% obtenido en la $j$-ésima réplica.
+\noindent dónde $\theta$ es el verdadero valor del parámetro, $\hat{\theta}_{j}$ la estimación obtenida en la $j$-ésima réplica, M es el número de réplicas, y $IC_j$ es el intervalo de confianza al 95\% obtenido en la $j$-ésima réplica.
 
 \subsection{Resultados}
 
