--- a/01_document/tesis-ejemplo.tex
+++ b/01_document/tesis-ejemplo.tex
@@ -81,8 +81,8 @@
 \end{center}
 \vspace{0.5cm}
 
-\textbf{\Large{Modelo de censura intervalar\\
-  para datos positivos}}\\
+\textbf{\Large{Modelo de regresión cuantílica\\
+  para respuestas positivas con censura intervalar}}\\
 \vspace{1.2cm}
 \textbf{\large{TESIS PARA OPTAR POR EL GRADO DE MAGISTER EN\\
   ESTADÍSTICA}}\\
@@ -116,7 +116,7 @@ A lo largo de la escritura de esta tesis de maestría he recibido un inmejorable 
 % Resumen
 \chapter*{Resumen}
 
-La presente tesis propone un modelo de regresión cuantílica para datos positivos con censura intervalar, que permite modelar estructuras de datos en dónde la variable respuesta no es directamente observable, y la única información que se conoce sobre la misma es que se encuentra en un intervalo $[a_i,b_i]$. Para evaluar si el método propuesto captura adecuadamente los parámetros poblacionales desde el punto de vista de la inferencia clásica, se desarrolla un estudio de simulación. Se observa que el modelo propuesto sí captura estos parámetros establecidos. Finalmente, se aplica el modelo a los datos de la Encuesta Nacional de Satisfacción de Salud ejecutada el año 2015. La estructura del modelo permite evaluar los factores relacionados al sueldo de los profesionales en salud (el cual había sido censurado desde el proceso de recolección de datos). El presente modelo es una extensión al modelo de regresión de censura intervalar expuesto en \cite{salyrosas:bayes}, pues se evalúa los factores subyacentes a una variable respuesta a lo largo de sus cuantiles.
+La presente tesis propone un modelo de regresión cuantílica en dónde la variable es no negativa y posee censura intervalar, es decir que esta no es directamente observable, y la única información que se conoce sobre ella es que se encuentra en cierto intervalo. Para evaluar si la metodología de estimación captura adecuadamente los parámetros poblacionales desde el punto de vista de la inferencia clásica, se desarrolla un estudio de simulación. Finalmente, se aplica el modelo a los datos de la Encuesta Nacional de Satisfacción de Salud ejecutada el año 2015. La estructura del modelo permite evaluar los factores relacionados al sueldo de los profesionales en salud (el cual había sido censurado desde el proceso de recolección de datos). El presente modelo es una extensión al modelo de regresión de censura intervalar expuesto en \cite{salyrosas:bayes}, pues evalúa los factores subyacentes a una variable respuesta a lo largo de sus cuantiles.
 
 \noindent \textbf{Palabras clave:} censura intervalar, regresión con censura, inferencia clásica, regresión paramétrica.
 
