--- a/01_document/01_introduccion/cap-introduccion.tex
+++ b/01_document/01_introduccion/cap-introduccion.tex
@@ -1,19 +1,19 @@
 \chapter{Introducción}
 Por distintas razones, los datos recabados en una investigación de índole estadística carecen de precisión: existen discrepancias entre el valor real del objeto de medición y el valor obtenido. Este proceso puede ser sistémico: durante la administración de cuestionarios a una población objetivo, el encuestado puede omitir, rehúsar o incluso responder incorrectamente preguntas embarazosas o invasivas. Este dilema es conocido entre los encuestadores: sus encuestados, si bien están dispuestos a ofrecer la mejor ayuda posible, no están dispuestos a ofrecer información que posteriormente les pueda comprometer. Para obtener dichos datos, el encuestador usa todo su ingenio para equilibrar la privacidad del encuestado y los objetivos de su investigación. En un esfuerzo de aminorar el estrés del encuestado, el encuestador puede censurar los datos con el fin de obtener una respuesta.
 
-Dicho tipo de datos se les denomina \textit{datos censurados}, y han sido estudiados previamente en la literatura académica. Formalmente, y siguiendo las ideas plasmadas por \cite{peto:p}, una variable $C$ se le denota censurada cuando su valor $c$ no es del todo observable y la única información sobre la misma es un intervalo $I$. Esta construcción permite definir tres tipos de datos censurados: datos censurados \textit{hacia la izquierda} (en dónde el intervalo $I$ se define de la forma $[-\infty,L_i]$), datos censurados \textit{intervalares} (definido de la forma $[L_i, L_f]; L_i < L_f$), datos censurados \textit{hacia la derecha} (definido de la forma $[L_f, \infty]$). 
+Dicho tipo de datos se les denomina \textit{datos censurados}, y han sido estudiados previamente en la literatura académica. Formalmente, y siguiendo las ideas plasmadas por \cite{peto:p}, una variable $C$ se le dice censurada cuando su valor no es del todo observable y la única información sobre la misma es un intervalo $I$.
 
-Este tipo de datos naturalmente generan retos en el proceso de modelamiento, pues los modelos estándares de regresión presumen que la variable respuesta es directamente observable. Situaciones como la precisada en el parráfo precedente han sido exploradas previamente: desde la determinación de la verosimilitud, la elaboración de modelos de regresión y su estimación bajo inferencia clásica y bayesiana. \cite{gentleman:lmk} identificaron un método de máxima verosimilitud para este tipo de datos, asegurando su consistencia estadística e identificando métodos algorítmicos para su cómputo. Utilizado los puntos extremos del intervalo, $L_i$ y $L_f$, era posible identificar la máxima verosímilitud a través de la diferencia de las funciones de distribución acumulada en dichos puntos. Tomando en consideración dicho método de estimación distintos autores propusieron modelos de regresión paramétricos bajo inferencia clásica y bayesiana, tales como \cite{mun:xu}, quienes identificaron modelos paramétricos de supervivencia para este tipo de datos.
+Este tipo de datos naturalmente generan retos en el proceso de modelamiento, pues los modelos estándares de regresión presumen que la variable respuesta es directamente observable. Situaciones como la precisada han sido exploradas previamente: desde la determinación de la verosimilitud, la elaboración de modelos de regresión y su estimación bajo inferencia clásica y bayesiana. \cite{gentleman:lmk} identificaron un método de máxima verosimilitud para este tipo de datos, asegurando su consistencia estadística e identificando métodos algorítmicos para su cómputo. Utilizado los puntos extremos del intervalo, $L_i$ y $L_f$, era posible identificar la máxima verosímilitud a través de la diferencia de las funciones de distribución acumulada en dichos puntos. Tomando en consideración dicho método de estimación distintos autores propusieron modelos de regresión paramétricos bajo inferencia clásica y bayesiana, tales como \cite{mun:xu}, quienes identificaron modelos paramétricos de supervivencia para este tipo de datos.
 
 Los modelos anteriormente expuestos tienen como propósito modelar el valor esperado de la variable respuesta condicionada por un conjunto de variables, no obstante el investigador puede tener como objetivo identificar los factores subyacentes que impactan a distintos cuantiles de la variable respuesta. Por ejemplo, los factores (y el efecto de los mismos) que modelen a una persona con un gran sueldo pueden ser muy distintos a una persona con un sueldo promedio o bajo. Bajo este contexto, \cite{koenker:kk} propuso un modelo que extiende esta idea a la estimación de modelos en los que los cuantiles de la distribución condicional de la variable respuesta son expresadas como funciones de un conjunto de covariables \cite{koenker:2001}. Posteriormente, \cite{zhou:x} propone un método de estimación para datos con censura intervalar y establece las propiedades asintóticas de los estimadores.
 
-La presente tesis propone utilizar los temas y modelos anteriormente expuestos para implementar un modelo paramétrico de regresión cuantílica aplicado a datos con censura intervalar. Para efectos de la aplicación, los datos se modelarán bajo una distribución Weibull, la cual es de amplia aplicabilidad y permite modelar colas pesadas. Con el propósito de implementar la regresión cuantílica y, atendiendo a la estructura de los datos, dicha distribución será reparametrizada. Finalmente, el método de estimación será el de máxima verosimilitud, siguiendo el marco de la inferencia clásica.
+La presente tesis propone utilizar los temas y modelos anteriormente expuestos para implementar la estimación de un modelo paramétrico de regresión cuantílica aplicado a datos con censura intervalar. Para efectos de la aplicación, los datos se modelarán bajo una distribución de Weibull, la cual es de amplia aplicabilidad y permite modelar colas pesadas. Con el propósito de implementar la regresión cuantílica y, atendiendo a la estructura de los datos, dicha distribución será reparametrizada. Finalmente, el método de estimación será el de máxima verosimilitud, siguiendo el marco de la inferencia clásica.
 
 \section{Objetivos}
-El objetivo de la tesis consiste en proponer un modelo de regresión cuantílica adaptado a datos positivos con censura intervalar basado en la distribución Weibull. Para estudiar el modelo propuesto, aplicaremos este modelo en dos conjuntos de datos: uno simulado y otro real. La base de datos a utilizar será la Encuesta Nacional de Satisfacción de Usuarios en Salud elaborada por el Instituto Nacional de Estadística e Informática el año 2015. Los objetivos específicos de la tesis son los siguientes:
+El objetivo de la tesis consiste en proponer un modelo de regresión cuantílica adaptado a datos positivos con censura intervalar basado en la distribución de Weibull. Para estudiar el modelo propuesto, aplicaremos este modelo a dos conjuntos de datos: uno simulado y otro real. La base de datos a utilizar será la Encuesta Nacional de Satisfacción de Usuarios en Salud elaborada por el Instituto Nacional de Estadística e Informática el año 2015. Los objetivos específicos de la tesis son los siguientes:
 \begin{itemize}
 	\item Revisar la literatura académica relacionada a las propuestas de modelos de regresión con datos censurados intervalarmente.
-	\item Identificar una estructura apropiada de la distribución Weibull para el modelo de regresión cuantílica vía una reparametrización del modelo.
+	\item Identificar una estructura apropiada de la distribución de Weibull para el modelo de regresión cuantílica vía una reparametrización del modelo.
 	\item Estimar los parámetros del modelo propuesto bajo inferencia clásica.
 	\item Implementar el método de estimación para el modelo propuesto en el lenguaje R y realizar un estudio de simulación
 	\item Aplicar el modelo propuesto a datos de la Encuesta Nacional de Satisfacción de Usuarios en Salud.
@@ -21,7 +21,7 @@ El objetivo de la tesis consiste en proponer un modelo de regresión cuantílica a
 
 \section{Organización del Trabajo}
 
-En el capítulo 2, se presenta una estructura de la distribución Weibull, apropiada para los datos con censura intervalar. Por ello, se realiza una parametrización alternativa y se estudia los 
+En el capítulo 2, se presenta una estructura de la distribución Weibull, apropiada para los datos con censura intervalar.
 
 En el capítulo 3, se propone el modelo de regresión con datos censurados intervalarmente. Asimismo, se efectúa un estudio de simulación para evaluar si el modelo captura apropiadamente los parámetros poblacionales.
 
